# change_liquid_backend

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00ec8da4b159_add_notification_fields.py  00ec8da4b159_add_notify_fields.py  179ecac9b418_add_warning_notified.py  53017120261f_add_brands_models_tables.py  5bfb14a52ebb_normalize_vehicles_brand_model.py  a1b2c3d4e5f6_rename_liquid_columns_to_component.py
src/app/: main.py
src/app/api/: routes.py
src/app/api/enums/: handler.py  schema.py
src/app/api/liquid/: handler.py  schema.py
src/app/api/replacement/: handler.py  schema.py
src/app/api/vehicle/: handler.py  schema.py
src/app/auth/: handler.py  jwt.py  password.py  schemas.py
src/app/common/: component_config.py  enums.py  liquid_config.py  messages.py  middleware.py
src/app/common/models/: liquid.py  replacement.py  vehicle.py
src/app/common/schemas/: base_liquid.py  base_replacement.py  base_vehicle.py  vehicle_notify.py
src/app/common/utils/: calculator.py  interval_utils.py
src/app/db/: database.py  migrate.py  models.py  seed.py
src/app/repository/: enum_repository.py  replacement_repository.py  vehicle_repository.py
src/app/services/: dto.py  email_service.py  notification_service.py  replacement_service.py  vehicle_service.py
src/tests/: conftest.py
src/tests/common/: test_middleware.py
src/tests/common/utils/: test_calculator.py  (+3 more)
src/tests/integration/: conftest.py
(+4 files in other folders)
