[tool.poetry]
name = "app"
version = "0.1.0"
description = "Car Liquid Tracker"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.2"
sqlalchemy = "^2.0.49"
aiosqlite = "^0.22.1"
uvicorn = "^0.30.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
flake8 = "^7.3.0"
ruff = "^0.15.8"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"